WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114123
Inspector should display information about non-object exceptions
https://bugs.webkit.org/show_bug.cgi?id=114123
Summary
Inspector should display information about non-object exceptions
Oliver Hunt
Reported
2013-04-07 10:19:03 PDT
Inspector should display information about non-object exceptions
Attachments
Patch
(13.67 KB, patch)
2013-04-07 10:22 PDT
,
Oliver Hunt
adele
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2013-04-07 10:22:51 PDT
Created
attachment 196794
[details]
Patch
Oliver Hunt
Comment 2
2013-04-07 11:45:48 PDT
Committed
r147872
: <
http://trac.webkit.org/changeset/147872
>
Chris Dumez
Comment 3
2013-04-07 13:28:17 PDT
I rebaselined a few more tests that had line number information after this patch in <
http://trac.webkit.org/changeset/147877
>.
Benjamin Poulain
Comment 4
2013-04-07 13:55:43 PDT
Thanks for the rebaseline.
Oliver Hunt
Comment 5
2013-04-07 14:06:14 PDT
(In reply to
comment #3
)
> I rebaselined a few more tests that had line number information after this patch in <
http://trac.webkit.org/changeset/147877
>.
Dammit, i thought i found them all. Thanks!!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug